--- a/.github/workflows/eslint.yaml
+++ b/.github/workflows/eslint.yaml
@@ -24,4 +24,4 @@ jobs:
         run: pnpm install
 
       - name: Run Eslint
-        run: pnpm eslint exercise/**/*.ts
+        run: node ./linter.js eslint
