Eslint and Type Check GitHub Actions (#5)
* Create eslint.yaml

* Update check.js

* Create linter.js

* Update eslint.yaml

* Update eslint.yaml

* Test

* Update eslint.yaml

* Test

* Update linter.js

* Update linter.js

* Update linter.js

* Update linter.js

* Removing tests

* Create typecheck.yaml

* Test

* Update linter.js

* Update check.js

* Update 1.ts

* Update typecheck.yaml

--- a/.github/workflows/typecheck.yaml
+++ b/.github/workflows/typecheck.yaml
@@ -1,4 +1,4 @@
-name: Eslint
+name: Type Check
 
 on:
   pull_request:
@@ -8,8 +8,8 @@ on:
       - "**.ts"
 
 jobs:
-  lint:
-    name: "Eslint"
+  type-check:
+    name: "Type Check"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,5 +28,5 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run Eslint
-        run: node ./linter.js eslint
+      # - name: Run Eslint
+      #   run: node ./linter.js typecheck
