--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -20,35 +20,38 @@
     "check": "node check.js"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@tsconfig/strictest": "^2.0.1",
-    "@types/core-js": "^2.5.5",
-    "@types/jest": "^29.5.1",
-    "@types/node": "^20.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "concurrently": "^8.0.1",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tsconfig/strictest": "^2.0.5",
+    "@types/core-js": "^2.5.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.27",
+    "@types/sqlite3": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.5.0",
+    "eslint-plugin-promise": "^6.6.0",
+    "jest": "^29.7.0",
     "livereload": "^0.9.3",
     "nodemon": "^2.0.22",
-    "parcel": "^2.8.3",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "parcel": "^2.14.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   },
   "engines": {
     "node": ">=18.9.1"
   },
   "dependencies": {
-    "daisyui": "^2.51.6"
+    "daisyui": "^2.52.0",
+    "promised-sqlite3": "^2.1.0",
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0"
   }
 }
-
