--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -49,6 +49,7 @@
     "node": ">=18.9.1"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "daisyui": "^2.52.0",
     "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7",
