--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -43,14 +43,20 @@
     "tailwindcss": "^3.4.17",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "zod": "^3.24.2"
   },
   "engines": {
     "node": ">=18.9.1"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/static": "^8.1.1",
     "@types/uuid": "^10.0.0",
     "daisyui": "^2.52.0",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
     "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
