--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -61,5 +61,16 @@
     "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sqlite3"
+    ],
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher",
+      "@swc/core",
+      "lmdb",
+      "msgpackr-extract"
+    ]
   }
 }
