--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -54,6 +54,7 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/static": "^8.1.1",
     "@types/uuid": "^10.0.0",
+    "bcrypt": "^5.1.1",
     "daisyui": "^2.52.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
@@ -64,6 +65,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "bcrypt",
       "sqlite3"
     ],
     "ignoredBuiltDependencies": [
