--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/bcrypt": "^5.0.2",
     "@types/core-js": "^2.5.8",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.27",
