--- a/app/submit-form/package.json
+++ b/app/submit-form/package.json
@@ -59,6 +59,7 @@
     "daisyui": "^2.52.0",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "fastify-plugin": "^5.0.1",
     "nunjucks": "^3.2.4",
     "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7",
